ci: fix the job to create Homebrew PR
Signed-off-by: Anqi Pang <anqipans@amazon.com>

--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -145,7 +145,7 @@ jobs:
           fi
 
   pr-to-homebrew:
-    needs: [macos-arm64-test-installer, macos-amd64-test-installer]
+    needs: [get-latest-tag, macos-arm64-test-installer, macos-amd64-test-installer]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Homebrew
