--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -173,5 +173,5 @@ jobs:
         run: brew bump-cask-pr --version=${FINCH_VERSION} finch
         env:
           FINCH_VERSION: ${{ needs.get-latest-tag.outputs.version }}
-          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.FINCH_BOT_TOKEN }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
         
