--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -54,12 +54,21 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.19.x
+          go-version-file: go.mod
+          cache: true
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.FINCH_TAG }}
       - name: Clean up previous files
         run: |
+          sudo rm -rf /opt/finch
+          sudo rm -rf ~/.finch
+          if pgrep '^qemu-system'; then
+            sudo pkill '^qemu-system'
+          fi
+          if pgrep '^socket_vmnet'; then
+            sudo pkill '^socket_vmnet'
+          fi
           cd $(brew --repo homebrew/cask) 
           brew uninstall --cask ./Casks/finch.rb || true
       - name: Set up Homebrew
@@ -84,7 +93,7 @@ jobs:
         if: ${{ always() }}
         run: |
           cd $(brew --repo homebrew/cask)
-          brew uninstall --cask ./Casks/finch.rb
+          brew uninstall --zap --cask ./Casks/finch.rb
           if [ -d "/Applications/Finch" ]; then
             echo ERROR: Finch is not uninstalled
             exit 1
@@ -110,12 +119,21 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.19.x
+          go-version-file: go.mod
+          cache: true
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.FINCH_TAG }}
       - name: Clean up previous files
         run: |
+          sudo rm -rf /opt/finch
+          sudo rm -rf ~/.finch
+          if pgrep '^qemu-system'; then
+            sudo pkill '^qemu-system'
+          fi
+          if pgrep '^socket_vmnet'; then
+            sudo pkill '^socket_vmnet'
+          fi
           cd $(brew --repo homebrew/cask) 
           brew uninstall --cask ./Casks/finch.rb || true
       - name: Set up Homebrew
@@ -138,7 +156,7 @@ jobs:
         if: ${{ always() }}
         run: |
           cd $(brew --repo homebrew/cask)
-          brew uninstall --cask ./Casks/finch.rb
+          brew uninstall --zap --cask ./Casks/finch.rb
           if [ -d "/Applications/Finch" ]; then
             echo ERROR: Finch is not uninstalled
             exit 1
@@ -146,7 +164,7 @@ jobs:
 
   pr-to-homebrew:
     needs: [get-latest-tag, macos-arm64-test-installer, macos-amd64-test-installer]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Set up Homebrew
         id: set-up-homebrew
@@ -155,5 +173,5 @@ jobs:
         run: brew bump-cask-pr --version=${FINCH_VERSION} finch
         env:
           FINCH_VERSION: ${{ needs.get-latest-tag.outputs.version }}
-          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.FINCH_BOT_TOKEN }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
         
