--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -41,12 +41,14 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.19.x
+          go-version-file: go.mod
+          cache: true
       - uses: actions/checkout@v3
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
           sudo rm -rf ~/.finch
+          sudo rm -rf ./_output
           if pgrep '^qemu-system'; then
             sudo pkill '^qemu-system'
           fi
@@ -66,6 +68,34 @@ jobs:
         run: sudo installer -pkg Finch-${GITHUB_REF_NAME}-aarch64.pkg -target /
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
+      - name: Checkout the tag
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
+          fetch-depth: 0
+          persist-credentials: false
+          submodules: true
+      - name: Build project
+        run: |
+          export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
+          which libtool
+          make
+      - name: Multiple instances of Finch test
+        run: |
+          # start two Finch VM
+          ./_output/bin/finch vm init
+          ./_output/bin/finch pull alpine
+          ./_output/bin/finch run -d --name test-ctr1 alpine
+          finch vm init
+          # reinitialize the VMs and verify the container is usable
+          finch vm pull alpine
+          finch run -d --name test-ctr2 alpine
+          ./_output/bin/finch vm stop
+          ./_output/bin/finch vm remove && ./_output/bin/finch vm start 
+          ./_output/bin/finch start test-ctr1
+          finch vm stop
+          finch vm remove && finch vm start
+          finch start test-ctr2
       - name: Silently uninstall
         run: echo 'y' | sudo bash /Applications/Finch/uninstall.sh
       - name: Delete installer
@@ -88,12 +118,14 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.19.x
+          go-version-file: go.mod
+          cache: true
       - uses: actions/checkout@v3
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
           sudo rm -rf ~/.finch
+          sudo rm -rf ./_output
           if pgrep '^qemu-system'; then
             sudo pkill '^qemu-system'
           fi
@@ -114,6 +146,34 @@ jobs:
           sudo installer -pkg Finch-${GITHUB_REF_NAME}-x86_64.pkg -target /
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
+      - name: Checkout the tag
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
+          fetch-depth: 0
+          persist-credentials: false
+          submodules: true
+      - name: Build project
+        run: |
+          export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
+          which libtool
+          make
+      - name: Multiple instances of Finch test
+        run: |
+          # start two Finch VM
+          ./_output/bin/finch vm init
+          ./_output/bin/finch pull alpine
+          ./_output/bin/finch run -d --name test-ctr1 alpine
+          finch vm init
+          # reinitialize the VMs and verify the container is usable
+          finch vm pull alpine
+          finch run -d --name test-ctr2 alpine
+          ./_output/bin/finch vm stop
+          ./_output/bin/finch vm remove && ./_output/bin/finch vm start 
+          ./_output/bin/finch start test-ctr1
+          finch vm stop
+          finch vm remove && finch vm start
+          finch start test-ctr2
       - name: Silently uninstall
         run: echo 'y' | sudo bash /Applications/Finch/uninstall.sh
       - name: Delete installer
