--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -59,6 +59,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.FINCH_TAG }}
+          fetch-depth: 0
+          persist-credentials: false
+          submodules: true
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
@@ -85,8 +88,34 @@ jobs:
           brew bump-cask-pr --write-only -f --version=$FINCH_VERSION finch
       - name: Silently install
         run: |
+          export HOMEBREW_NO_INSTALL_FROM_API=1
           cd $(brew --repo homebrew/cask)
           brew install --cask ./Casks/finch.rb
+      - name: Build project
+        run: |
+          brew install go lz4 automake autoconf libtool
+          export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
+          which libtool
+          make
+      - name: Multiple instances of Finch test
+        run: |
+          pwd
+          # start two Finch VM instances
+          ./_output/bin/finch vm init
+          finch vm init
+          # start a container in each VM instance
+          ./_output/bin/finch pull alpine
+          finch pull alpine
+          ./_output/bin/finch run -d --name test-ctr1 alpine
+          finch run -d --name test-ctr2 alpine
+          ./_output/bin/finch vm stop && ./_output/bin/finch vm remove
+          finch vm stop && finch vm remove
+      - name: Clean up multiple instance test
+        run: |
+          sudo rm -rf ./_output
+          export HOMEBREW_NO_INSTALL_FROM_API=1
+          cd $(brew --repo homebrew/cask)
+          brew reinstall --cask ./Casks/finch.rb
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
       - name: Silently uninstall
@@ -124,6 +153,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.FINCH_TAG }}
+          fetch-depth: 0
+          persist-credentials: false
+          submodules: true
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
@@ -148,8 +180,35 @@ jobs:
           brew bump-cask-pr --write-only -f --version=$FINCH_VERSION finch
       - name: Silently install
         run: |
+          export HOMEBREW_NO_INSTALL_FROM_API=1
           cd $(brew --repo homebrew/cask)
           brew install --cask ./Casks/finch.rb
+      - name: Build project
+        run: |
+          brew install go lz4 automake autoconf libtool
+          export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
+          which libtool
+          make
+      - name: Multiple instances of Finch test
+        run: |
+          pwd
+          # start two Finch VM instances
+          ./_output/bin/finch vm init
+          finch vm init
+          # start a container in each VM instance
+          ./_output/bin/finch pull alpine
+          finch pull alpine
+          ./_output/bin/finch run -d --name test-ctr1 alpine
+          finch run -d --name test-ctr2 alpine
+          ./_output/bin/finch vm stop && ./_output/bin/finch vm remove
+          finch vm stop && finch vm remove
+      - name: Clean up multiple instance test
+        run: |
+          pwd
+          sudo rm -rf ./_output
+          export HOMEBREW_NO_INSTALL_FROM_API=1
+          cd $(brew --repo homebrew/cask)
+          brew reinstall --cask ./Casks/finch.rb
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
       - name: Silently uninstall
@@ -161,7 +220,7 @@ jobs:
             echo ERROR: Finch is not uninstalled
             exit 1
           fi
-
+          
   pr-to-homebrew:
     needs: [get-latest-tag, macos-arm64-test-installer, macos-amd64-test-installer]
     runs-on: macos-latest
