Add script for updating OS base image in Makefile
Signed-off-by: Vishwas Siravara <vsiravara@gmail.com>

--- a/.github/workflows/sync-submodules.yaml
+++ b/.github/workflows/sync-submodules.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Update sub modules
         run: |
           git submodule update --remote
+          ./.github/bin/update-os-image.sh
 
       - name: Create PR
         uses: peter-evans/create-pull-request@v4
