--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -105,8 +105,9 @@ jobs:
           # start a container in each VM instance
           ./_output/bin/finch pull alpine
           finch pull alpine
-          ./_output/bin/finch run -d --name test-ctr1 alpine
-          finch run -d --name test-ctr2 alpine
+          ./_output/bin/finch run --name test-ctr1 alpine
+          finch run --name test-ctr2 alpine
+          # clean up the VMs
           ./_output/bin/finch vm stop && ./_output/bin/finch vm remove
           finch vm stop && finch vm remove
       - name: Clean up multiple instance test
@@ -114,6 +115,9 @@ jobs:
           sudo rm -rf ./_output
           export HOMEBREW_NO_INSTALL_FROM_API=1
           cd $(brew --repo homebrew/cask)
+          # Need to resintall because there were errors on arm64 11.7 and arm64 12.6 hosts after running multiple instances tests,
+          # that caused the VM initialization failure in the e2e test. 
+          # Example workflow run https://github.com/runfinch/finch/actions/runs/4367457552/jobs/7638794529
           brew reinstall --cask ./Casks/finch.rb
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
@@ -198,6 +202,7 @@ jobs:
           finch pull alpine
           ./_output/bin/finch run --name test-ctr1 alpine
           finch run --name test-ctr2 alpine
+          # clean up the VMs
           ./_output/bin/finch vm stop && ./_output/bin/finch vm remove
           finch vm stop && finch vm remove
       - name: Clean up multiple instance test
