--- a/.github/workflows/release-homebrew.yaml
+++ b/.github/workflows/release-homebrew.yaml
@@ -95,7 +95,6 @@ jobs:
         run: |
           brew install go lz4 automake autoconf libtool
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
-          which libtool
           make
       - name: Multiple instances of Finch test
         run: |
@@ -115,7 +114,7 @@ jobs:
           sudo rm -rf ./_output
           export HOMEBREW_NO_INSTALL_FROM_API=1
           cd $(brew --repo homebrew/cask)
-          # Need to resintall because there were errors on arm64 11.7 and arm64 12.6 hosts after running multiple instances tests,
+          # Need to reinstall because there were errors on arm64 11.7 and arm64 12.6 hosts after running multiple instances tests,
           # that caused the VM initialization failure in the e2e test. 
           # Example workflow run https://github.com/runfinch/finch/actions/runs/4367457552/jobs/7638794529
           brew reinstall --cask ./Casks/finch.rb
@@ -190,7 +189,6 @@ jobs:
         run: |
           brew install go lz4 automake autoconf libtool
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
-          which libtool
           make
       - name: Multiple instances of Finch test
         run: |
