--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -89,11 +89,19 @@ jobs:
           finch run --name test-ctr2 alpine
           # check whether containers exist
           if ! ./_output/bin/finch ps -a | grep 'test-ctr1'; then
-            echo "ERROR: The container test-ctr1 doesn't exist"
+            echo "ERROR: The container test-ctr1 doesn't exist in the built finch VM"
+            exit 1
+          fi
+          if ./_output/bin/finch ps -a | grep 'test-ctr2'; then
+            echo "ERROR: The container test-ctr2 shoudn't exist in the built finch VM"
             exit 1
           fi
           if ! finch ps -a | grep 'test-ctr2'; then
-            echo "ERROR: The container test-ctr2 doesn't exist"
+            echo "ERROR: The container test-ctr2 doesn't exist in the installed finch VM"
+            exit 1
+          fi
+          if finch ps -a | grep 'test-ctr1'; then
+            echo "ERROR: The container test-ctr1 shoudn't exist in the installed finch VM"
             exit 1
           fi
           # clean up the VMs
@@ -180,11 +188,19 @@ jobs:
           finch run --name test-ctr2 alpine
           # check whether containers exist
           if ! ./_output/bin/finch ps -a | grep 'test-ctr1'; then
-            echo "ERROR: The container test-ctr1 doesn't exist"
+            echo "ERROR: The container test-ctr1 doesn't exist in the built finch VM"
+            exit 1
+          fi
+          if ./_output/bin/finch ps -a | grep 'test-ctr2'; then
+            echo "ERROR: The container test-ctr2 shoudn't exist in the built finch VM"
             exit 1
           fi
           if ! finch ps -a | grep 'test-ctr2'; then
-            echo "ERROR: The container test-ctr2 doesn't exist"
+            echo "ERROR: The container test-ctr2 doesn't exist in the installed finch VM"
+            exit 1
+          fi
+          if finch ps -a | grep 'test-ctr1'; then
+            echo "ERROR: The container test-ctr1 shoudn't exist in the installed finch VM"
             exit 1
           fi
           # clean up the VMs
