--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "deps/finch-core"]
 	path = deps/finch-core
-	url = https://github.com/pendo324/finch-core.git
-	branch = lima-with-vz-extra-disk-local
+	url = https://github.com/runfinch/finch-core.git
