ignore exit code for Rosetta install
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,7 +103,7 @@ jobs:
             sudo pkill '^socket_vmnet'
           fi
       - name: Install Rosetta 2
-        run: echo "A" | softwareupdate --install-rosetta 
+        run: echo "A" | softwareupdate --install-rosetta || true 
       - run: brew install go lz4 automake autoconf libtool 
       - name: Build project
         run: |
