chore: add "expr" PR type
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -38,6 +38,11 @@ jobs:
                 "type":"build",
                 "section":"Build System or External Dependencies",
                 "hidden":false
+              },
+              {
+                "type":"expr",
+                "section":"Experimental",
+                "hidden":true
               }
             ]
           # Before we are at v1.0.0
