set hidden => false to make changes appear in changelog / be releaseable
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -42,7 +42,7 @@ jobs:
               {
                 "type":"expr",
                 "section":"Experimental",
-                "hidden":true
+                "hidden":false
               }
             ]
           # Before we are at v1.0.0
