ci: add "exp" PR type (#323)
Issue #, if available:

*Description of changes:*
- Add a new "expr" PR type to track experimental features. An
"experimental" feature is something that can be used, but is not
guaranteed to be stable (such as the changes made by #282).

*Testing done:*
  - N/A


- [x] I've reviewed the guidance in CONTRIBUTING.md


#### License Acceptance

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.

---------

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -38,6 +38,11 @@ jobs:
                 "type":"build",
                 "section":"Build System or External Dependencies",
                 "hidden":false
+              },
+              {
+                "type":"exp",
+                "section":"Experimental",
+                "hidden":false
               }
             ]
           # Before we are at v1.0.0
