--- a/.github/workflows/lint-pr-title.yaml
+++ b/.github/workflows/lint-pr-title.yaml
@@ -15,5 +15,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
+        with:
+          # List from https://github.com/commitizen/conventional-commit-types/blob/master/index.json
+          # with custom types added at the end.
+          # Custom types should also be added in release-please.yaml changelog-types.
+          types: |
+            feat
+            fix
+            docs
+            style
+            refactor
+            perf
+            test
+            build
+            ci
+            chore
+            revert
+            exp
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
