--- a/.github/workflows/upload-build-to-s3.yaml
+++ b/.github/workflows/upload-build-to-s3.yaml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   macos-aarch64-build:
-    runs-on: ['self-hosted', 'macos', 'arm64', '11.7']
+    runs-on: [self-hosted, macos, arm64, 11, release]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v3
@@ -42,7 +42,7 @@ jobs:
           if-no-files-found: error
 
   macos-x86_64-build:
-    runs-on: ['self-hosted', 'macos', 'amd64', '11.7']
+    runs-on: [self-hosted, macos, amd64, 11.7, release]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v3
