--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -111,14 +111,14 @@ jobs:
       - name: Install Rosetta 2
         run: echo "A" | softwareupdate --install-rosetta || true 
       - run: brew install go lz4 automake autoconf libtool 
-        shell: zsh
+        shell: zsh {0}
       - name: Build project
         run: |
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           make
-        shell: zsh
+        shell: zsh {0}
       - run: make test-e2e
-        shell: zsh
+        shell: zsh {0}
   mdlint:
     runs-on: ubuntu-latest
     steps:
