--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout the tag
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.ref_name }}
+          ref: 0.6.1
           fetch-depth: 0
           persist-credentials: false
           submodules: true
@@ -77,6 +77,7 @@ jobs:
           brew install go lz4 automake autoconf libtool
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           make
+        shell: zsh {0}
       - name: Multiple instances of Finch test
         run: |
           # start two Finch VM instances
@@ -139,7 +140,7 @@ jobs:
       - name: Checkout the tag
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.ref_name }}
+          ref: 0.6.1
           fetch-depth: 0
           persist-credentials: false
           submodules: true
@@ -175,6 +176,7 @@ jobs:
           brew install go lz4 automake autoconf libtool
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           make
+        shell: zsh {0}
       - name: Multiple instances of Finch test
         run: |
           # start two Finch VM instances
