--- a/.github/workflows/release-installer.yaml
+++ b/.github/workflows/release-installer.yaml
@@ -69,9 +69,10 @@ jobs:
           aws-region: ${{ secrets.REGION }}
       - name: Download from S3
         run: |
-          aws s3 cp s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-${GITHUB_REF_NAME}-aarch64.pkg Finch-${GITHUB_REF_NAME}-aarch64.pkg
+          aws s3 cp s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-v0.6.1-aarch64.pkg Finch-v0.6.1-aarch64.pkg
+        shell: zsh {0}
       - name: Silently install
-        run: sudo installer -pkg Finch-${GITHUB_REF_NAME}-aarch64.pkg -target /
+        run: sudo installer -pkg Finch-v0.6.1-aarch64.pkg -target /
       - name: Build project
         run: |
           brew install go lz4 automake autoconf libtool
@@ -115,13 +116,13 @@ jobs:
           # Need to reinstall because there were errors on arm64 11.7 and arm64 12.6 hosts after running multiple instances tests,
           # that caused the VM initialization failure in the e2e test. 
           # Example workflow run https://github.com/runfinch/finch/actions/runs/4367457552/jobs/7638794529
-          sudo installer -pkg Finch-${GITHUB_REF_NAME}-aarch64.pkg -target /
+          sudo installer -pkg Finch-v0.6.1-aarch64.pkg -target /
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
       - name: Silently uninstall
         run: echo 'y' | sudo bash /Applications/Finch/uninstall.sh
       - name: Delete installer
-        run: rm -rf Finch-${GITHUB_REF_NAME}-aarch64.pkg
+        run: rm -rf Finch-v0.6.1-aarch64.pkg
 
   macos-amd64-test-installer:
     strategy:
@@ -167,10 +168,11 @@ jobs:
           aws-region: ${{ secrets.REGION }}
       - name: Download from S3
         run: |
-          aws s3 cp s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-${GITHUB_REF_NAME}-x86_64.pkg Finch-${GITHUB_REF_NAME}-x86_64.pkg
+          aws s3 cp s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-v0.6.1-x86_64.pkg Finch-v0.6.1-x86_64.pkg
+        shell: zsh {0}
       - name: Silently install
         run: |
-          sudo installer -pkg Finch-${GITHUB_REF_NAME}-x86_64.pkg -target /
+          sudo installer -pkg Finch-v0.6.1-x86_64.pkg -target /
       - name: Build project
         run: |
           brew install go lz4 automake autoconf libtool
@@ -211,10 +213,10 @@ jobs:
         run: |
           sudo rm -rf ./_output
           echo 'y' | sudo bash /Applications/Finch/uninstall.sh
-          sudo installer -pkg Finch-${GITHUB_REF_NAME}-x86_64.pkg -target /
+          sudo installer -pkg Finch-v0.6.1-x86_64.pkg -target /
       - name: Run e2e tests
         run: INSTALLED=true make test-e2e
       - name: Silently uninstall
         run: echo 'y' | sudo bash /Applications/Finch/uninstall.sh
       - name: Delete installer
-        run: rm -rf Finch-${GITHUB_REF_NAME}-x86_64.pkg
+        run: rm -rf Finch-v0.6.1-x86_64.pkg
