--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -34,7 +34,6 @@ jobs:
           # We need to get all the git tags to make version injection work. See VERSION in Makefile for more detail.
           fetch-depth: 0
           submodules: true
-      - uses: actions/setup-go@v4
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
@@ -49,12 +48,15 @@ jobs:
       - name: Install Rosetta 2
         run: echo "A" | softwareupdate --install-rosetta || true
       - run: brew install go lz4 automake autoconf libtool
+        shell: zsh {0}
       - name: Build project
         run: |
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           make
+        shell: zsh {0}
       - name: Run benchmark
         run: make test-benchmark | tee benchmark.txt
+        shell: zsh {0}
       - name: Set OS info as env variable
         run: |
           echo "OS_VERSION=$(sw_vers -productVersion | cut -d '.' -f 1)" >> $GITHUB_ENV
