Remove build upload process and integrated with installer tests
Signed-off-by: Kevin Li <cnkevin@amazon.com>

--- a/.github/workflows/upload-build-to-s3.yaml
+++ b/.github/workflows/upload-build-to-s3.yaml
@@ -91,7 +91,6 @@ jobs:
             ]
     runs-on: ${{ matrix.os }}
     needs:
-      - macos-x86_64-build
       - macos-aarch64-build
     timeout-minutes: 60
     env:
@@ -194,6 +193,9 @@ jobs:
               [self-hosted, macos, amd64, 13, release]
             ]
     runs-on: ${{ matrix.os }}
+    needs:
+      - macos-x86_64-build
+      - macos-aarch64-build
     timeout-minutes: 60
     env:
       ACCESS_TOKEN: ${{ secrets.FINCH_BOT_TOKEN }}
