ci: Rename action and set up nightly build (#421)
*Description of changes:*
Rename the action.
Set up the installer build and test every day at 9 am UTC (2 am PDT) to
validate latest main branch.

- [X] I've reviewed the guidance in CONTRIBUTING.md


#### License Acceptance

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.

---------

Signed-off-by: Kevin Li <cnkevin@amazon.com>

--- a/.github/workflows/build-and-test-pkg.yaml
+++ b/.github/workflows/build-and-test-pkg.yaml
@@ -1,7 +1,10 @@
-name: Upload build to s3
+name: Build, test and upload .pkg to S3
 
+# The scheduler runs at 9 am UTC every day.
 on:
   workflow_dispatch:
+  shcedule:
+    - cron: '0 9 * * *'
 env:
   GO111MODULE: on
 
