Change the workflow trigger condition to when a new tag start with v created
Signed-off-by: Kevin Li <cnkevin@amazon.com>

--- a/.github/workflows/release-automation.yaml
+++ b/.github/workflows/release-automation.yaml
@@ -1,11 +1,9 @@
 name: Release Finch latest version
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  create:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   release-finch-latest:
