--- a/.github/workflows/release-automation.yaml
+++ b/.github/workflows/release-automation.yaml
@@ -1,31 +1,39 @@
 name: Release Finch latest version
 on:
   workflow_dispatch:
-  create:
+  push:
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
-  release-finch-latest:
+  get-latest-tag:
+    name: Get the latest release tag
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.latest-tag.outputs.tag }}
     steps:
       - uses: actions/checkout@v3
         with:
             fetch-depth: 0
-
-      - name: Get Finch latest tag
+      - name: 'Get the latest tag'
         id: latest-tag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
+    
+  build-and-test-finch-pkg:
+    needs: get-latest-tag
+    uses: ./.github/workflows/build-and-test-pkg.yaml
+    secrets: inherit
+    with:
+      ref_name: ${{ needs.get-latest-tag.outputs.tag }}
 
-      - name: Build and test .pkg
-        uses: ./.github/workflows/build-and-test-pkg.yaml
-        with:
-          GITHUB_REF_NAME: ${{ steps.latest-tag.outputs.tag }}
-
-      #- name: Upload .pkg installer to the latest release
-      #  uses: ./.github/workflows/upload-installer-to-release.yaml
-      #  with:
-      #    GITHUB_REF_NAME: ${{ steps.latest-tag.outputs.tag }}
-
-      #- name: Homebrew release tests and cut PR
-      #  uses: ./.github/workflows/release-homebrew.yaml
+  #upload-pkg-and-dependency-source-code-to-release:
+  #  needs: build-and-test-finch-pkg
+  #  uses: ./.github/workflows/upload-installer-to-release.yaml
+  #  secrets: inherit
+  #  with:
+  #    ref_name: ${{ needs.get-latest-tag.outputs.tag }}
+  
+  #release-homebrew:
+  #  needs: upload-pkg-and-dependency-source-code-to-release
+  #  secrets: inherit
+  #  uses: ./.github/workflows/release-homebrew.yaml
